Opened 15 years ago

Closed 15 years ago

Last modified 12 years ago

#354 closed defect (fixed)

h264 interlaced decoding failure - alot of artifacts and error log messages

Reported by: Hendrik Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords: H264 mpegts
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Following file fails to decode properly:

http://files.1f0.de/samples/20100812_1635_-_TVNorge_HD_-_Gossip Girl.ts

The file is a DVB-S2 recording.

The problem can easily be reproduced with ffplay.
Seeking in the file sometimes fixes the problem, which strikes me as odd.

I realize the file is problably just broken, however since seeking sometimes fixes the problem, maybe the error can somehow be concealed while decoding?

Attached is ffplay output when decoding.

Attachments (2)

ffplay-out.txt (10.2 KB ) - added by Hendrik 15 years ago.
ffplay console output
test.264 (2.0 MB ) - added by Carl Eugen Hoyos 15 years ago.

Change History (7)

by Hendrik, 15 years ago

Attachment: ffplay-out.txt added

ffplay console output

comment:2 by Carl Eugen Hoyos, 15 years ago

Component: avcodecundetermined
Keywords: h264 added
Reproduced by developer: set
Status: newopen

Works fine with the reference decoder and mplayer -demuxer h264es, fails with mplayer -demuxer lavf

$ ffmpeg -i test.264 out.avi
ffmpeg version N-31558-g47b71ee, Copyright (c) 2000-2011 the FFmpeg developers
  built on Jul 19 2011 23:34:00 with gcc 4.5.3
  configuration: --cc=/usr/local/gcc-4.5.3/bin/gcc --enable-gpl
  libavutil    51. 11. 0 / 51. 11. 0
  libavcodec   53.  8. 0 / 53.  8. 0
  libavformat  53.  6. 0 / 53.  6. 0
  libavdevice  53.  2. 0 / 53.  2. 0
  libavfilter   2. 27. 0 /  2. 27. 0
  libswscale    2.  0. 0 /  2.  0. 0
  libpostproc  51.  2. 0 / 51.  2. 0
[h264 @ 0x12d5540] non-existing SPS 0 referenced in buffering period
[h264 @ 0x12d5540] non-existing PPS referenced
[h264 @ 0x12d5540] non-existing SPS 0 referenced in buffering period
[h264 @ 0x12d5540] non-existing PPS 0 referenced
[h264 @ 0x12d5540] decode_slice_header error
[h264 @ 0x12d5540] no frame!
[h264 @ 0x12d5540] non-existing SPS 0 referenced in buffering period
[h264 @ 0x12d5540] non-existing PPS referenced
[h264 @ 0x12d5540] non-existing SPS 0 referenced in buffering period
[h264 @ 0x12d5540] non-existing PPS 0 referenced
[h264 @ 0x12d5540] decode_slice_header error
[h264 @ 0x12d5540] no frame!

...

[h264 @ 0x12d5540] non-existing SPS 0 referenced in buffering period
[h264 @ 0x12d5540] non-existing PPS referenced
[h264 @ 0x12d5540] non-existing SPS 0 referenced in buffering period
[h264 @ 0x12d5540] non-existing PPS 0 referenced
[h264 @ 0x12d5540] decode_slice_header error
[h264 @ 0x12d5540] no frame!
[h264 @ 0x12d5540] mmco: unref short failure
[h264 @ 0x12d3420] Estimating duration from bitrate, this may be inaccurate

Seems stream 0 codec frame rate differs from container frame rate: 50.00 (50/1) -> 25.00 (50/2)
Input #0, h264, from 'test.264':
  Duration: N/A, bitrate: N/A
    Stream #0.0: Video: h264 (High), yuvj420p, 1920x1080 [PAR 1:1 DAR 16:9], 50 fps, 25 tbr, 1200k tbn, 50 tbc
Incompatible pixel format 'yuvj420p' for codec 'mpeg4', auto-selecting format 'yuv420p'
[buffer @ 0x130e020] w:1920 h:1080 pixfmt:yuvj420p tb:1/1000000 sar:1/1 sws_param:
[buffersink @ 0x12d3360] auto-inserting filter 'auto-inserted scaler 0' between the filter 'src' and the filter 'out'
[scale @ 0x12d1840] w:1920 h:1080 fmt:yuvj420p -> w:1920 h:1080 fmt:yuv420p flags:0x4
[mpeg4 @ 0x12d2720] removing common factors from framerate
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf53.6.0
    Stream #0.0: Video: mpeg4, yuv420p, 1920x1080 [PAR 1:1 DAR 16:9], q=2-31, 200 kb/s, 25 tbn, 25 tbc
Stream mapping:
  Stream #0.0 -> #0.0
Press [q] to stop, [?] for help
[h264 @ 0x12d5540] illegal short term buffer state detected
    Last message repeated 3 times
[h264 @ 0x12d5540] mmco: unref short failure
    Last message repeated 1 times
[h264 @ 0x12d5540] illegal short term buffer state detected
    Last message repeated 1 times
[h264 @ 0x12d5540] mmco: unref short failure
    Last message repeated 1 times
[h264 @ 0x12d5540] illegal short term buffer state detected
frame=    6 fps=  0 q=5.2 size=     836kB time=00:00:00.24 bitrate=28520.3kbits/s dup=0 drop=5    ^M    Last message repeated 1 times
[h264 @ 0x12d5540] mmco: unref short failure
    Last message repeated 1 times
[h264 @ 0x12d5540] illegal short term buffer state detected
    Last message repeated 1 times
[h264 @ 0x12d5540] mmco: unref short failure
    Last message repeated 1 times
[h264 @ 0x12d5540] illegal short term buffer state detected
    Last message repeated 1 times
[h264 @ 0x12d5540] mmco: unref short failure
    Last message repeated 1 times
[h264 @ 0x12d5540] illegal short term buffer state detected
frame=   12 fps= 11 q=17.2 size=    1574kB time=00:00:00.48 bitrate=26856.7kbits/s dup=0 drop=10    ^M    Last message repeated 1 times
[h264 @ 0x12d5540] mmco: unref short failure
    Last message repeated 1 times
[h264 @ 0x12d5540] illegal short term buffer state detected
    Last message repeated 1 times
[h264 @ 0x12d5540] mmco: unref short failure
    Last message repeated 1 times
[h264 @ 0x12d5540] illegal short term buffer state detected
    Last message repeated 1 times
[h264 @ 0x12d5540] error while decoding MB 22 22, bytestream (-13)
[h264 @ 0x12d5540] mmco: unref short failure
    Last message repeated 1 times
[h264 @ 0x12d5540] illegal short term buffer state detected
frame=   16 fps= 11 q=30.6 Lsize=    1864kB time=00:00:00.64 bitrate=23863.8kbits/s dup=0 drop=14    ^M
video:1858kB audio:0kB global headers:0kB muxing overhead 0.323024%

by Carl Eugen Hoyos, 15 years ago

Attachment: test.264 added

comment:3 by Carl Eugen Hoyos, 15 years ago

Keywords: H264 TS added; h264 removed

comment:4 by Carl Eugen Hoyos, 15 years ago

Resolution: fixed
Status: openclosed

Fixed by Michael.

comment:5 by Carl Eugen Hoyos, 12 years ago

Keywords: mpegts added; TS removed
Note: See TracTickets for help on using tickets.