h264: Use mismatching frame numbers in fields to synchronize the  first/second field state independant of them being reference or not. Fixes Ticket354

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>